--- a/project.ipynb
+++ b/project.ipynb
@@ -854,6 +854,17 @@
     "    assert True, \\\n",
     "        \"\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "type:NotebookTask"
+    ]
+   },
+   "source": [
+    "# Test"
+   ]
   }
  ],
  "metadata": {
